--- a/PortfolioAce/Views/AllFundsView.xaml
+++ b/PortfolioAce/Views/AllFundsView.xaml
@@ -57,7 +57,7 @@
             </StackPanel>
             <StackPanel DockPanel.Dock="Left" Margin="30,0,0,0">
                 <Button Margin="20,10,0,0" Width="210" Command="{Binding ShowNewInvestorActionCommand}">Investor Manager...</Button>
-                <Button Margin="20,10,0,0" Width="210">NAV Breakdown</Button>
+                <Button Margin="20,10,0,0" Width="210">Finalise NAV</Button>
             </StackPanel>
         </DockPanel>
         <Border BorderBrush="Silver" BorderThickness="1" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Visibility="{Binding ShowWidget}"/>
